--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-/img/*
-!/img/.gitkeep
-!/img/.cache/
-
-/img/.cache/*
-!/img/.cache/.gitkeep
-
-!/img/rgb_specktrum.jpg
-/.idea/
-/*/*.pyc
-*.pyc
+target
